[gd_scene load_steps=2 format=3 uid="uid://dspe0ik0mf58k"]

[ext_resource type="Script" path="res://scenes/title.gd" id="1_17ert"]

[node name="Title" type="Control"]
custom_minimum_size = Vector2(1600, 900)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_17ert")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer3/PanelContainer3"]
layout_mode = 2

[node name="CowLevelButton" type="Button" parent="VBoxContainer/HBoxContainer3/PanelContainer3/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -15.5
offset_right = 41.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Cow level"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="OneMoonButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -15.5
offset_right = 41.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "One star, one moon"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Space2Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer3/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -15.5
offset_right = 41.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = " One star"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="SpaceLevelButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -15.5
offset_right = 41.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "One star,
three moons"

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer4"]
layout_mode = 2

[node name="RailsExampleButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer4/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -15.5
offset_right = 41.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Rails example"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Extinction"
